--- a/example/frontend/index.html
+++ b/example/frontend/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>frontend</title>
+    <title>link-cards</title>
     <style>
         body {
             min-height: 100vh;
@@ -18,7 +18,7 @@
 
 <body>
     <noscript>
-        <strong>We're sorry but frontend doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+        <strong>We're sorry but link-cards doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
